<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rental_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/spinner_title"
        android:text="Choose Camera: "
        android:layout_margin="@dimen/activity_view_margin"/>

    <Spinner
        android:id="@+id/camera_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_view_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/rental_length_title"
        android:text="Rental Days: "
        android:layout_margin="@dimen/activity_view_margin"/>

    <NumberPicker
        android:id="@+id/rental_length"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_view_margin"/>

    <EditText
        android:id="@+id/insurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="Are You Insured?"/>
    <!-- add click handler -->
    <Button
        android:id="@+id/confirm_rental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Confirm Rental"
        android:layout_margin="@dimen/activity_view_margin"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/results"
        android:layout_margin="@dimen/activity_view_margin"/>

</LinearLayout>